[package]
name = "winshift"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1.0.63"
chrono = "0.4.38"
colored = "2.1.0"
log = "0.4.22"
log4rs = "1.3.0"
ctrlc = "3.4.5"

[target."cfg(windows)".dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target."cfg(unix)".dependencies]
libc = "0.2.156"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
core-foundation = "0.10.0"
objc = "0.2.7"
